# espg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Tiltfile  flake.nix
.github/workflows/: ci.yml
examples/: bank_account.rs  bank_account_pg.rs  benchmark.rs  benchmark_pg.rs
examples/wasm/: Cargo.toml  README.md  test.mjs
examples/wasm/src/: lib.rs
src/: aggregate.rs  async_graphql.rs  commands.rs  commit.rs  error.rs  event_stores.rs  id.rs  lib.rs  rocket.rs  rocket_db_pools.rs  subscriber.rs  util.rs
src/event_stores/: in_memory.rs  postgres.rs  sql_helpers.rs  streaming.rs
src/util/: loadable.rs  txid.rs
