[package]
name = "espg"
version = "0.1.0"
edition = "2024"
description = "An event sourcing library for Rust with PostgreSQL support"
license = "MIT"
exclude = [
  "Tiltfile",
  ".vscode/**"
]

[dependencies]
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std", "net"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"]}
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["v4"] }
mutants = "0.0.3"
async-trait = "0.1.88"
dyn-clone = "1.0.19"
rocket = { version = "0.5.1", optional = true }
md-5 = "0.10.6"
async-graphql = { version = "7.0.17", optional = true }
itertools = "0.14.0"

[dev-dependencies]
deadpool-postgres = "0.14.1"
pgtemp = "0.6.0"
pgmanager = "0.2.0"

[features]
inmem = []
streaming = []
rocket = ["dep:rocket"]
async-graphql = ["dep:async-graphql"]

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"

[[example]]
name = "benchmark"
required-features = ["inmem"]

[[example]]
name = "benchmark_pg"
required-features = []

[[example]]
name = "bank_account_pg"
required-features = ["streaming"]

[[example]]
name = "bank_account"
required-features = ["inmem", "streaming"]
