[package]
name = "espg"
version = "0.2.0"
edition = "2024"
description = "An event sourcing library for Rust with PostgreSQL support"
license = "MIT"
exclude = [
  "Tiltfile",
  ".vscode/**"
]

[dependencies]
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
indexmap = { version = "2.9.0", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std", "net"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1"]}
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["v4"], optional = true }
mutants = "0.0.3"
async-trait = "0.1.88"
rocket = { version = "0.5.1", optional = true }
rocket_db_pools = { version = "0.2.0", features = ["deadpool_postgres"], optional = true }
md-5 = "0.10.6"
async-graphql = { version = "7.0.19", optional = true }
itertools = "0.14.0"

[dev-dependencies]
deadpool-postgres = "0.14.1"
pgmanager = "0.3.1"

[features]
inmem = ["indexmap"]
indexmap = ["dep:indexmap"]
streaming = []
rocket = ["dep:rocket"]
rocket_db_pools = ["rocket", "dep:rocket_db_pools"]
async-graphql = ["dep:async-graphql"]
uuid = ["dep:uuid"]

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"

[[example]]
name = "benchmark"
required-features = ["inmem"]

[[example]]
name = "benchmark_pg"
required-features = []

[[example]]
name = "bank_account_pg"
required-features = ["streaming", "uuid"]

[[example]]
name = "bank_account"
required-features = ["inmem", "streaming", "uuid"]
